tests/baselines/reference/tsxElementResolution11.errors.txt
file.tsx(17,7): error TS2322: Type '{ x: number; }' is not assignable to type '{ q?: number; }'.
  Property 'x' does not exist on type '{ q?: number; }'.


==== file.tsx (1 errors) ====
    declare module JSX {
    	interface Element { }
    	interface ElementAttributesProperty { }
    	interface IntrinsicElements { }
    }
    
    interface Obj1type {
    	new(n: string): any;
    }
    var Obj1: Obj1type;
    <Obj1 x={10} />; // OK
    
    interface Obj2type {
    	new(n: string): { q?: number };
    }
    var Obj2: Obj2type;
    <Obj2 x={10} />; // Error
          ~
!!! error TS2322: Type '{ x: number; }' is not assignable to type '{ q?: number; }'.
!!! error TS2322:   Property 'x' does not exist on type '{ q?: number; }'.
    
    interface Obj3type {
    	new(n: string): { x: number; };
    }
    var Obj3: Obj3type;
    <Obj3 x={10} />; // OK
    